--- a/views/carrito.html
+++ b/views/carrito.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Remera roja Puma | lFie store</title>
+    <title>Carrito de compra | lFie store</title>
 
 <!------ Google fonts ------>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,55 +16,100 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
 <!------ CSS ------>
-    <link rel="stylesheet" href="../../../css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 
 </head>
 <body>
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img src="../../../assets/img/logo.png" alt="logo" width="125px">
+                    <img src="../assets/img/logo.png" alt="logo" width="125px">
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="../../../index.html">Inicio</a></li>
-                        <li><a href="../../productos.html">Productos</a></li>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="productos.html">Productos</a></li>
                         <li><a href="">Sobre nosotros</a></li>
                         <li><a href="">Contacto</a></li>
                         <li><a href="">Cuenta</a></li>
                     </ul>
                 </nav>
-                <img src="../../../assets/img/cart.png" alt="" width="30px" height="30px">
-                <img src="../../../assets/img/menu.png" alt="" class="menu-icon" onclick="menutoggle()">
+                <img src="../assets/img/cart.png" alt="" width="30px" height="30px">
+                <img src="../assets/img/menu.png" alt="" class="menu-icon" onclick="menutoggle()">
             </div>
         </div>
 
-<!-- Main -->
+<!---------- Detalles de los items del carrito ---------->
+<div class="small-container cart-page">
+    <table>
+        <tr>
+            <th>Producto</th>
+            <th>Cantidad</th>
+            <th>Subtotal</th>
+        </tr>
+        <tr>
+            <td>
+                <div class="cart-info">
+                    <img src="" alt="Sin imagen">
+                </div>
+                <div>
+                    <p>No hay producto agregado todavia</p>
+                    <small>Precio: </small>
+                    <a href="">Remove</a>
+                </div>
+            </td>
+            <td><input type="number" value="0"></td>
+            <td>Precio</td>
+        </tr>
 
-<!-- Producto Principal -->
+        <tr>
+            <td>
+                <div class="cart-info">
+                    <img src="" alt="Sin imagen">
+                </div>
+                <div>
+                    <p>No hay producto agregado todavia</p>
+                    <small>Precio: </small>
+                    <a href="">Remove</a>
+                </div>
+            </td>
+            <td><input type="number" value="0"></td>
+            <td>Precio</td>
+        </tr>
 
-<!---------- Brands ---------->
-    <div class="brands">
-        <div class="small-container">
-            <div class="row">
-                <div class="col-5">
-                    <img src="../../../assets/img/logo-godrej.png" alt="">
+        <tr>
+            <td>
+                <div class="cart-info">
+                    <img src="" alt="Sin imagen">
                 </div>
-                <div class="col-5">
-                    <img src="../../../assets/img/logo-oppo.png" alt="">
+                <div>
+                    <p>No hay producto agregado todavia</p>
+                    <small>Precio: </small>
+                    <a href="">Remove</a>
                 </div>
-                <div class="col-5">
-                    <img src="../../../assets/img/logo-coca-cola.png" alt="">
-                </div>
-                <div class="col-5">
-                    <img src="../../../assets/img/logo-paypal.png" alt="">
-                </div>
-                <div class="col-5">
-                    <img src="../../../assets/img/logo-philips.png" alt="">
-                </div>
-            </div>
-        </div>
+            </td>
+            <td><input type="number" value="0"></td>
+            <td>Precio</td>
+        </tr>
+    </table>
+
+    <div class="total-price">
+        <table>
+            <tr>
+                <td>Subtotal</td>
+                <td>Sin Precio</td>
+            </tr>
+            <tr>
+                <td>IVA</td>
+                <td>Sin Precio</td>
+            </tr>
+            <tr>
+                <td>TOTAL</td>
+                <td>Sin Precio</td>
+            </tr>
+        </table>
     </div>
+</div>
 
 <!---------- Footer ---------->
 <div class="footer">
@@ -74,12 +119,12 @@
                 <h3>Descarga nuestra App!</h3>
                 <p>Descargar App para Android y IOS mobile</p>
                 <div class="app-logo">
-                    <img src="../../../assets/img/play-store.png" alt="">
-                    <img src="../../../assets/img/app-store.png" alt="">
+                    <img src="../assets/img/play-store.png" alt="">
+                    <img src="../assets/img/app-store.png" alt="">
                 </div>
             </div>
             <div class="footer-col-2">
-                <img src="../../assets/img/logo-white.png" alt="">
+                <img src="../assets/img/logo-white.png" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quo optio perferendis expedita, veritatis dolores!</p>
             </div>
             <div class="footer-col-3">
@@ -106,7 +151,7 @@
     </div>
 </div>
 
-<script src="../../../js/menuDesplegable.js"></script>
+<script src=""></script>
 
 </body>
 </html>
