--- a/views/productos.html
+++ b/views/productos.html
@@ -33,7 +33,9 @@
                         <li><a href="">Cuenta</a></li>
                     </ul>
                 </nav>
-                <img src="../assets/img/cart.png" alt="" width="30px" height="30px">
+                <a href="carrito.html">
+                    <img src="../assets/img/cart.png" alt="" width="30px" height="30px">
+                </a>
                 <img src="../assets/img/menu.png" alt="" class="menu-icon" onclick="menutoggle()">
             </div>
 
@@ -46,16 +48,15 @@
         <h2>Todos los productos</h2>
         <input type="search" class="searchBar" placeholder="Buscar producto">
         <select>
-            <option>Default sorting</option>
-            <option>Precio de menor al mayor</option>
-            <option>Precio del mayor al menor</option>
-            <option>Default sorting</option>
+            <option>Sortear por</option>
+            <option id="MenorMayor">Precio de menor al mayor</option>
+            <option id="MayorMeno">Precio del mayor al menor</option>
         </select>
     </div>
 
 
     <div class="row">
-        <div class="col-4">
+        <div class="col-4 llamadoProductos">
             <a href="productos/remeras/remera-roja.html">
                 <img src="../assets/img/product-1.jpg" alt="" href="remera-roja.html">
             </a>
@@ -68,7 +69,7 @@
             </div>
             <p>$2100</p>
         </div>
-        <div class="col-4">
+        <div class="col-4 llamadoProductos">
             <a href="productos/zapatillas/zapatillas-negras.html">
                 <img src="../assets/img/product-2.jpg" alt="">
             </a>
@@ -81,7 +82,7 @@
             </div>
             <p>$21300</p>
         </div>
-        <div class="col-4">
+        <div class="col-4 llamadoProductos">
             <a href="productos/pantalones/jogging-gris-adidas.html">
                 <img src="../assets/img/product-3.jpg" alt="">
             </a>
@@ -94,7 +95,7 @@
             </div>
             <p>$7800</p>
         </div>
-        <div class="col-4">
+        <div class="col-4 llamadoProductos">
             <a href="productos/remeras/chomba-puma.html">
                 <img src="../assets/img/product-4.jpg" alt="">
             </a>
@@ -110,7 +111,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-4">
+        <div class="col-4 llamadoProductos">
             <a href="productos/zapatillas/zapatillas-grises-hrx.html">
                 <img src="../assets/img/product-5.jpg" alt="">
             </a>
@@ -123,7 +124,7 @@
             </div>
             <p>$19800</p>
         </div>
-        <div class="col-4">
+        <div class="col-4 llamadoProductos">
             <a href="productos/remeras/remera-negra-puma.html">
                 <img src="../assets/img/product-6.jpg" alt="">
             </a>
@@ -136,7 +137,7 @@
             </div>
             <p>$2300</p>
         </div>
-        <div class="col-4">
+        <div class="col-4 llamadoProductos">
             <a href="productos/accesorios/medias-hrx.html">
                 <img src="../assets/img/product-7.jpg" alt="">
             </a>
@@ -148,7 +149,7 @@
             </div>
             <p>$1700</p>
         </div>
-        <div class="col-4">
+        <div class="col-4 llamadoProductos">
             <a href="productos/accesorios/reloj-negro-fossil.html">
                 <img src="../assets/img/product-8.jpg" alt="">
             </a>
@@ -164,7 +165,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-4">
+        <div class="col-4 llamadoProductos">
             <a href="productos/accesorios/reloj-cronometro.html">
                 <img src="../assets/img/product-9.jpg" alt="">
             </a>
@@ -177,7 +178,7 @@
             </div>
             <p>$13000</p>
         </div>
-        <div class="col-4">
+        <div class="col-4 llamadoProductos">
             <a href="productos/zapatillas/zapatillas-camufladas-hrx.html">
                 <img src="../assets/img/product-10.jpg" alt="">
             </a>
@@ -191,7 +192,7 @@
             </div>
             <p>$19800</p>
         </div>
-        <div class="col-4">
+        <div class="col-4 llamadoProductos">
             <a href="productos/zapatillas/zapatillas-grises-roadster.html">
                 <img src="../assets/img/product-11.jpg" alt="">
             </a>
@@ -204,7 +205,7 @@
             </div>
             <p>$2100</p>
         </div>
-        <div class="col-4">
+        <div class="col-4 llamadoProductos">
             <a href="productos/pantalones/jogging-negro-nike.html">
                 <img src="../assets/img/product-12.jpg" alt="">
             </a>
@@ -229,32 +230,6 @@
         <span>&#8594;</span>
     </div>
 </div>
-
-
-
-
-<!---------- Brands ---------->
-    <div class="brands">
-        <div class="small-container">
-            <div class="row">
-                <div class="col-5">
-                    <img src="../assets/img/logo-godrej.png" alt="">
-                </div>
-                <div class="col-5">
-                    <img src="../assets/img/logo-oppo.png" alt="">
-                </div>
-                <div class="col-5">
-                    <img src="../assets/img/logo-coca-cola.png" alt="">
-                </div>
-                <div class="col-5">
-                    <img src="../assets/img/logo-paypal.png" alt="">
-                </div>
-                <div class="col-5">
-                    <img src="../assets/img/logo-philips.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
 
 <!---------- Footer ---------->
 <div class="footer">
@@ -296,6 +271,8 @@
     </div>
 </div>
 
+
+<script src="../js/main.js"></script>
 <script src="../js/menuDesplegable.js"></script>
 
 </body>
